--- a/mvvmblog/build.gradle
+++ b/mvvmblog/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
 
+    // liveData
+    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
